jar capable of scripting in Java 21